benchmark-results/main/cseq/concurrentwitness2test.2025-11-17_11-13-00.logfiles/SV-COMP23_unreach-call.cseq-safe016_rmo.opt.yml.log
ConcurrentWitness2Test/start.sh svcomp23-witness-benchmarks/tools/cseq/pthread-wmm/safe016_rmo.opt.yml/safe016_rmo.opt.i --graphml-witness svcomp23-witness-benchmarks/tools/cseq/pthread-wmm/safe016_rmo.opt.yml/witness.graphml


--------------------------------------------------------------------------------


Traceback (most recent call last):
  File "/home/runner/work/ConcurrentWitness2Test/ConcurrentWitness2Test/ConcurrentWitness2Test/main.py", line 85, in translate_to_c
    sys.exit(-1)
SystemExit: -1
/tmp/BenchExec_run_w9vpujjw/tmp/tmpufb2pr8d.c
Compilation started
/tmp/BenchExec_run_w9vpujjw/tmp/tmpufb2pr8d.c: In function ‘P2’:
/tmp/BenchExec_run_w9vpujjw/tmp/tmpufb2pr8d.c:626:19: error: ‘FALSE’ undeclared (first use in this function)
  626 |   weak$$choice0 = FALSE;;
      |                   ^~~~~
/tmp/BenchExec_run_w9vpujjw/tmp/tmpufb2pr8d.c:626:19: note: each undeclared identifier is reported only once for each function it appears in
/tmp/BenchExec_run_w9vpujjw/tmp/tmpufb2pr8d.c: In function ‘main’:
/tmp/BenchExec_run_w9vpujjw/tmp/tmpufb2pr8d.c:729:19: error: ‘FALSE’ undeclared (first use in this function)
  729 |   weak$$choice0 = FALSE;;
      |                   ^~~~~
/tmp/BenchExec_run_w9vpujjw/tmp/tmpufb2pr8d.c:740:19: error: ‘TRUE’ undeclared (first use in this function)
  740 |   weak$$choice1 = TRUE;;
      |                   ^~~~

Compilation ended (exit code 1)
Verdict: Compilation error
Verdict: Unknown error
